# Washly

./: .dockerignore  Dockerfile  README.md  bot.py  docker-compose.yml  env.example  pyproject.toml
scripts/: diagnose.py  seed_db.py
tests/: conftest.py  test_config.py  test_llm.py  test_prompts.py
tests/test_tools/: test_create_booking.py  test_get_available_shops.py  test_get_booking_details.py  test_get_user_details.py
voicetools/: config.py  language_processor.py  llm.py  logging.py  pipeline.py  prompts.py  registry.py  utils.py
voicetools/backends/: bookings.py  db.py  mongo_bookings.py  mongo_shops.py  mongo_users.py  provider.py  shops.py  users.py
voicetools/tools/: cancel_booking.py  create_booking.py  get_available_shops.py  get_booking_details.py  get_today_date.py  get_user_details.py  reschedule_booking.py  schemas.py
